<resources>
    <string name="app_name">LanBiTou</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="newest_notes">所有笔记</string>
    <string name="all_notes">笔记本</string>

    <string name="notebook">笔记本</string>
    <string name="note">笔记</string>
    <string name="addnotebook">添加笔记本</string>

    <string name="bill">账单</string>
    <string name="setting">设置</string>
    <string name="last_synch_date">上次同时间</string>
    <string name="addNewBill">添加一条收支</string>
    <string name="in">收入</string>
    <string name="out">支出</string>
    <string name="newBillFolder">新建账单</string>


    <string name="addNote">添加笔记</string>


    <string name="finish">确定</string>
    <string name="cencal">取消</string>
    <string name="paintTitle">画画板</string>


    <string name="name">昵称</string>
    <string name="email">邮箱</string>
    <string name="logout">退出</string>
    <string name="about">关于</string>

    <string name="title">标题</string>
    <string name="content">内容</string>


</resources>
