<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--显示收支比例-->
    <ProgressBar
        android:id="@+id/inout_ratio_pb"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:max="100"
        android:progress="40"
        style="@style/mProgressHorizontal"
        />

    <!--显示钱数-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/in_money_tv"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="123"/>
        <TextView
            android:id="@+id/out_money_tv"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text="123"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bill_h2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:layout_below="@id/inout_ratio_pb"

        >
        <TextView
            android:background="#e43a0b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/in"
            android:gravity="center"
            />
        <TextView
            android:background="@color/billBlue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/out"
            android:gravity="center"
            />
    </LinearLayout>




    <RelativeLayout
        android:id="@+id/bill_operator"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/show_folder_ib"
            android:background="@drawable/bill_folder"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            />

        <Button
            android:id="@+id/go_add_bill_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/addNewBill"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>


    <ListView
        android:id="@+id/bill_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="@dimen/bill_list_divider"
        android:divider="@color/billListDividerColor"
        android:layout_marginTop="10dp"
        android:layout_above="@id/bill_operator"
        android:layout_below="@id/bill_h2"
        >
    </ListView>
<!--账单夹-->
    <FrameLayout
        android:id="@+id/bill_folder_fra"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </FrameLayout>


</RelativeLayout>